Send PHP errors to STDERR

--- a/php-errors.ini
+++ b/php-errors.ini
@@ -1,3 +1,6 @@
 error_reporting = E_ALL & ~E_WARNING & ~E_NOTICE & ~E_STRICT & ~E_DEPRECATED
 display_errors = Off
 
+log_errors = On
+error_log = /dev/stderr
+
